test/Fail/Issue1209-3.err
Issue1209-3.agda:3.1-51: error: [SafeFlagPragma]
The --safe mode does not allow OPTIONS pragma
--sized-types
